# concert-ticketing-portal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/concert_portal/: app.py  database.py  models.py
src/concert_portal/static/: style.css
src/concert_portal/static/fonts/: LICENSE.txt
src/concert_portal/templates/: base.html  booking_detail.html  concert_detail.html  concert_new.html  concerts.html  ticket_new.html
src/concert_ticketing_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_booking_form.py  test_bookings.py  test_concerts.py  test_frontend.py  test_health.py  test_organiser_forms.py  test_payment_proof.py  test_tickets.py
